--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,44 @@
-body 
+/* Colors  */
+$btn-color: #fab102
+$icon-green: #49bf15
+$text: #1a1820
+/* Base settings */
+html
 	font-size: 10px
+
+.button
+	background-color: $btn-color
+	color: white
+	padding: 1rem 3rem
+	border: none
+	border-radius: 8px
+	text-transform: uppercase
+
+
+
+
+
+/* Typography */
+section
+	padding: 10rem 0
+
+/* Main (первая секция)*/
+main
+	padding: 3rem 0
+.header
+	height: 7rem	
+
+.phone
+	display: inline-block
+	color: $text
+	font-weight: 900
+	font-size: 2rem
+
+	
+
+
+
+
+
+
+
