--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,15 @@ section {
   padding: 10rem 0; }
 
 /* Main (первая секция)*/
+.header {
+  height: 7rem; }
+
 .main {
   padding: 2rem 0;
   background: #fff url(../img/bg.jpg) center center no-repeat;
-  color: #292929; }
+  color: #292929;
+  /* Правая часть блока main*/
+  /* Левая часть main (форма) */ }
   .main-phone {
     display: inline-block;
     font-family: 'ProximaNova_Bold', sans-serif;
@@ -64,6 +69,39 @@ section {
     display: block;
     text-transform: uppercase;
     font-size: 2.2rem; }
-
-.header {
-  height: 7rem; }
+  .main-form {
+    padding: 4rem 5rem;
+    background-color: white;
+    text-align: center;
+    /* Заголовок формы */ }
+    .main-form label {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      font-size: 1.3rem;
+      display: inline-block;
+      background-color: white;
+      padding: 0.5rem; }
+    .main-form_header {
+      font-size: 1.8rem;
+      font-weight: 600;
+      line-height: 1.2;
+      margin-bottom: 4rem; }
+      .main-form_header strong {
+        font-size: 1.9rem; }
+    .main-form_input {
+      display: block;
+      width: 70%;
+      border: 1px solid #ddd;
+      padding: 1.5rem;
+      margin: 2rem auto; }
+    .main-form_btn {
+      margin: 2.2rem auto 1.5rem;
+      display: block;
+      width: 70%;
+      padding: 1.2rem;
+      font-size: 1.6rem; }
+    .main-form small {
+      display: block;
+      margin-top: 1.5rem;
+      font-size: 1rem; }
