--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ html {
 body {
   font-family: 'ProximaNova_Reg', sans-serif; }
 
+button:focus, input:focus, a:focus {
+  outline: none; }
+
+/*Стили всех кнопочек*/
 .button {
   background-color: #fab102;
   color: white;
@@ -15,7 +19,11 @@ body {
   padding: 1rem 3rem;
   border: none;
   border-radius: 8px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  transition: all 0.5s; }
+  .button:hover {
+    cursor: pointer;
+    background-color: #d79802; }
 
 /* Typography */
 section {
@@ -40,6 +48,7 @@ section {
   .main-content {
     margin-top: 8rem; }
   .main h1 {
+    margin-top: 0;
     margin-bottom: 3rem;
     font-family: 'ProximaNova_Bold', sans-serif;
     text-transform: uppercase;
@@ -105,3 +114,7 @@ section {
       display: block;
       margin-top: 1.5rem;
       font-size: 1rem; }
+
+@media (max-width: 991px) {
+  .main-phone {
+    text-align: center; } }
