--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,6 +15,10 @@ html
 	font-size: 10px
 body
 	@include reg()
+button, input, a 
+	&:focus
+		outline: none
+/*Стили всех кнопочек*/
 .button
 	background-color: $btn-color
 	color: white
@@ -23,6 +27,11 @@ body
 	border: none
 	border-radius: 8px
 	text-transform: uppercase
+	transition: all 0.5s
+	&:hover
+		cursor: pointer
+		background-color: darken($btn-color, 7%)
+	
 
 /* Typography */
 section
@@ -31,6 +40,8 @@ section
 /* Main (первая секция)*/
 .header
 	height: 7rem
+	&-btn
+
 .main
 	padding: 2rem 0
 	background: #fff url(../img/bg.jpg) center center no-repeat
@@ -47,6 +58,7 @@ section
 	/* Правая часть блока main*/
 
 	h1
+		margin-top: 0
 		margin-bottom: 3rem
 		@include bold()
 		text-transform: uppercase
@@ -115,7 +127,14 @@ section
 			margin-top: 1.5rem
 			font-size: 1rem
 
+@media (max-width: 991px)
+	.main-phone
+		text-align: center
+	.main h1
+		
+	.main-form
 
+		
 			
 
 
