--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ section {
   color: #292929;
   /* Правая часть блока main*/
   /* Левая часть main (форма) */ }
-  .main-phone {
+  .main-phone_link {
     display: inline-block;
     font-family: 'ProximaNova_Bold', sans-serif;
     font-weight: 900;
@@ -48,18 +48,18 @@ section {
   .main-content {
     margin-top: 8rem; }
   .main h1 {
-    margin-top: 0;
+    margin-top: -1rem;
     margin-bottom: 3rem;
     font-family: 'ProximaNova_Bold', sans-serif;
     text-transform: uppercase;
     font-size: 4rem;
-    line-height: 1.45; }
+    line-height: 1.45;
+    min-width: 0; }
   .main-subtitle {
     margin-bottom: 5rem;
     font-size: 2.4rem;
     font-weight: 600;
-    line-height: 1.4;
-    text-align: left; }
+    line-height: 1.4; }
   .main-trigger {
     margin: auto;
     display: inline-block;
@@ -79,7 +79,7 @@ section {
     text-transform: uppercase;
     font-size: 2.2rem; }
   .main-form {
-    padding: 4rem 5rem;
+    padding: 4rem 0;
     background-color: white;
     text-align: center;
     /* Заголовок формы */ }
@@ -116,5 +116,18 @@ section {
       font-size: 1rem; }
 
 @media (max-width: 991px) {
+  .main {
+    background-position: top right; }
   .main-phone {
-    text-align: center; } }
+    text-align: center; }
+  .main-title {
+    text-align: center;
+    padding-bottom: 3rem; } }
+
+@media (max-width: 767px) {
+  .header {
+    text-align: center; }
+  .main-content {
+    margin-top: 14rem; }
+  .main-phone, .header-btn {
+    margin-top: 2rem; } }
