--- a/sass/style.sass
+++ b/sass/style.sass
@@ -42,11 +42,12 @@ section
 	height: 7rem
 	&-btn
 
+
 .main
 	padding: 2rem 0
 	background: #fff url(../img/bg.jpg) center center no-repeat
 	color: $main-text
-	&-phone
+	&-phone_link
 		display: inline-block
 		@include bold()
 		font-weight: 900
@@ -58,18 +59,20 @@ section
 	/* Правая часть блока main*/
 
 	h1
-		margin-top: 0
+		margin-top: -1rem
 		margin-bottom: 3rem
 		@include bold()
 		text-transform: uppercase
 		font-size: 4rem
 		line-height: 1.45
+		min-width: 0
+
 	&-subtitle
 		margin-bottom: 5rem
 		font-size: 2.4rem
 		font-weight: 600
 		line-height: 1.4
-		text-align: left
+		
 	&-trigger
 		margin: auto
 		display: inline-block
@@ -80,7 +83,8 @@ section
 		strong
 			font-size: 3rem
 		span
-			font-size: 2.4rem	
+			font-size: 2.4rem
+
 	&-pay
 		margin-top: 2.7rem
 		margin-bottom: 7rem
@@ -88,11 +92,13 @@ section
 		display: block
 		text-transform: uppercase
 		font-size: 2.2rem
+
 	/* Левая часть main (форма) */
 	&-form
-		padding: 4rem 5rem
+		padding: 4rem 0
 		background-color: white
 		text-align: center
+
 		/* Заголовок формы */
 		label
 			position: absolute
@@ -102,6 +108,7 @@ section
 			display: inline-block
 			background-color: white
 			padding: 0.5rem
+
 		&_header
 			font-size: 1.8rem
 			font-weight: 600
@@ -116,6 +123,7 @@ section
 			border: 1px solid #ddd 
 			padding: 1.5rem	
 			margin: 2rem auto
+
 		&_btn
 			margin: 2.2rem auto 1.5rem
 			display: block
@@ -128,11 +136,26 @@ section
 			font-size: 1rem
 
 @media (max-width: 991px)
+	.main
+		background-position: top right
 	.main-phone
 		text-align: center
-	.main h1
+	.main-content
 		
-	.main-form
+	.main-title
+		text-align: center
+		padding-bottom: 3rem
+
+@media (max-width: 767px)	
+	.header
+		text-align: center
+	.main-content
+		margin-top: 14rem
+	.main-phone, .header-btn 
+		margin-top: 2rem
+	
+			
+			
 
 		
 			
