--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 body {
   font-family: 'ProximaNova_Reg', sans-serif; }
 
-button:focus, input:focus, a:focus {
+button:focus, input:focus, a:focus, textarea:focus {
   outline: none; }
 
 /*Стили всех кнопочек*/
@@ -104,6 +104,7 @@ section {
       display: block;
       width: 70%;
       border: 1px solid #ddd;
+      border-radius: 5px;
       padding: 1.5rem;
       margin: 2rem auto; }
     .main-form_btn {
@@ -145,11 +146,65 @@ section {
 .slick-active {
   outline: none; }
 
-.prev {
-  position: absolute;
+.arrow {
   top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  z-index: 99;
+  width: 2rem;
+  height: 2rem;
+  border: none; }
+  .arrow:hover {
+    cursor: pointer; }
+
+.prev {
+  background-size: 90%;
   left: 0;
-  transform: translateY(50%); }
+  background: url(/img/left-arrow.png) center no-repeat; }
+
+.next {
+  background-size: 90%;
+  right: 0;
+  background: url(/img/right-arrow.png) center no-repeat; }
+
+/*Оформление всплывашек*/
+.popup {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3; }
+  .popup-content {
+    background-color: white;
+    position: fixed;
+    width: 35rem;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10%;
+    padding: 2rem 0rem;
+    border-radius: 5px;
+    text-align: center; }
+  .popup-header {
+    font-family: 'ProximaNova_Bold', sans-serif; }
+  .popup-form {
+    padding: 0;
+    margin-top: 3rem; }
+  .popup-close {
+    position: absolute;
+    top: -1.6rem;
+    right: -3rem;
+    width: 3rem;
+    text-align: center;
+    font-size: 3rem;
+    border: none;
+    color: white;
+    background-color: transparent;
+    cursor: pointer; }
 
 @media (max-width: 991px) {
   .main {
