--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,7 +15,7 @@ html
 	font-size: 10px
 body
 	@include reg()
-button, input, a 
+button, input, a, textarea 
 	&:focus
 		outline: none
 /*Стили всех кнопочек*/
@@ -122,6 +122,7 @@ section
 			display: block
 			width: 70%
 			border: 1px solid #ddd 
+			border-radius: 5px
 			padding: 1.5rem	
 			margin: 2rem auto
 
@@ -166,12 +167,70 @@ section
 .slick-active
 	outline: none
 
-.prev
-	position: absolute
+.arrow
 	top: 50%
-	left: 0
-	transform: translateY(50%)
+	transform: translateY(-50%)
+	position: absolute
+	z-index: 99
+	width: 2rem
+	height: 2rem
+	border: none
+	&:hover
+		cursor: pointer
+		
 
+	
+.prev
+	background-size: 90%
+	left: 0
+	background: url(/img/left-arrow.png) center no-repeat	
+.next
+	background-size: 90%
+	right: 0		
+	background: url(/img/right-arrow.png) center no-repeat	
+
+/*Оформление всплывашек*/
+.popup
+	display: none
+	background-color: rgba(0, 0, 0, 0.5)
+	position: fixed
+	left: 0
+	top: 0
+	right: 0
+	bottom: 0
+	width: 100%
+	height: 100%
+	z-index: 3
+
+
+	&-content
+		background-color: white
+		position: fixed
+		width: 35rem
+		left: 50%
+		transform: translateX(-50%)
+		top: 10%
+		padding: 2rem 0rem
+		border-radius: 5px
+		text-align: center
+	&-header
+		@include bold()	
+	&-form
+		padding: 0	
+		margin-top: 3rem
+	&-close
+		position: absolute
+		top: -1.6rem
+		right: -3rem
+		width: 3rem
+		text-align: center
+		font-size: 3rem
+		border: none
+		color: white
+		background-color: transparent
+		&:hover
+		cursor: pointer
+		
 
 
 
