--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ section {
 /* Main (первая секция)*/
 .header {
   height: 7rem; }
+  .header-btn {
+    float: right; }
 
 .main {
   padding: 2rem 0;
@@ -167,6 +169,55 @@ section {
   right: 0;
   background: url(/img/right-arrow.png) center no-repeat; }
 
+/*Секция с ценами*/
+.prices {
+  background: url("../img/prices-bg.jpg") center; }
+  .prices-btn {
+    text-align: right;
+    margin-top: 3rem;
+    margin-right: 0; }
+  .prices-header {
+    text-align: center;
+    color: white;
+    margin: 2rem 0 10rem; }
+    .prices-header h2 {
+      font-family: 'ProximaNova_Bold', sans-serif;
+      font-size: 3.6rem; }
+    .prices-header p {
+      font-size: 1.4rem; }
+  .prices-card {
+    padding: 1rem 2rem 4rem;
+    text-align: center;
+    box-shadow: 7px 12px 21px 0px rgba(0, 0, 0, 0.17);
+    min-height: 50rem; }
+    .prices-card h4 {
+      font-size: 1.9rem;
+      font-family: 'ProximaNova_Bold', sans-serif;
+      margin: 3rem 0; }
+  .prices-list {
+    padding: 0;
+    list-style: none;
+    min-height: 14rem;
+    font-size: 1.6rem;
+    line-height: 1.6; }
+    .prices-list li:before {
+      content: '';
+      display: inline-block;
+      margin-right: 1rem;
+      width: 1.4rem;
+      height: 1.4rem;
+      background: url("../img/checked.svg") no-repeat center;
+      background-size: 100%;
+      vertical-align: middle; }
+  .prices img {
+    display: inline-block;
+    margin-bottom: 2rem; }
+  .prices-tag {
+    display: inline-block;
+    margin-bottom: 2rem;
+    font-size: 1.9rem;
+    font-family: 'ProximaNova_Bold', sans-serif; }
+
 /*Оформление всплывашек*/
 .popup {
   display: none;
@@ -206,6 +257,10 @@ section {
     background-color: transparent;
     cursor: pointer; }
 
+@media (max-width: 1199px) {
+  .prices-card h4 {
+    min-height: 5rem; } }
+
 @media (max-width: 991px) {
   .main {
     background-position: top right; }
@@ -213,10 +268,22 @@ section {
     text-align: center; }
   .main-title {
     text-align: center;
-    padding-bottom: 3rem; } }
+    padding-bottom: 3rem; }
+  .prices-btn, .prices-header {
+    text-align: center; }
+  .prices-header {
+    margin-bottom: 0; }
+  .prices-btn {
+    padding: 2rem 0;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem; }
+  .prices-card {
+    margin-top: 2rem; } }
 
 @media (max-width: 767px) {
   .header {
     text-align: center; }
+    .header-btn {
+      float: none; }
   .main-content {
     margin-top: 15rem; } }
