--- a/sass/style.sass
+++ b/sass/style.sass
@@ -31,8 +31,31 @@ button, input, a, textarea
 	&:hover
 		cursor: pointer
 		background-color: darken($btn-color, 7%)
-	
 
+/*  Шаблон формы */	
+.form
+	label
+		position: absolute
+		left: 50%
+		transform: translateX(-50%) translateY(-50%)
+		font-size: 1.3rem
+		display: inline-block
+		background-color: white
+		padding: 0.5rem
+	&_input
+		display: block
+		width: 100%
+		border: 1px solid #ddd 
+		border-radius: 5px
+		padding: 1.5rem	
+		margin: 2rem auto
+	&_btn
+		margin: 2.2rem auto 1.5rem
+		display: block
+		height: 5rem
+		width: 100%
+		padding: 1.2rem
+		font-size: 1.6rem
 /* Typography */
 section
 	padding: 10rem 0
@@ -96,42 +119,16 @@ section
 
 	/* Левая часть main (форма) */
 	&-form
-		padding: 4rem 0
+		padding: 4rem 5rem
 		background-color: white
 		text-align: center
-
-		/* Заголовок формы */
-		label
-			position: absolute
-			left: 50%
-			transform: translateX(-50%) translateY(-50%)
-			font-size: 1.3rem
-			display: inline-block
-			background-color: white
-			padding: 0.5rem
-
 		&_header
-			font-size: 1.8rem
-			font-weight: 600
+			font-size: 1.8rem 
+			font-weight: 500
 			line-height: 1.2
 			margin-bottom: 4rem
 			strong
 				font-size: 1.9rem
-			
-		&_input
-			display: block
-			width: 70%
-			border: 1px solid #ddd 
-			border-radius: 5px
-			padding: 1.5rem	
-			margin: 2rem auto
-
-		&_btn
-			margin: 2.2rem auto 1.5rem
-			display: block
-			width: 70%
-			padding: 1.2rem
-			font-size: 1.6rem
 		small
 			display: block
 			margin-top: 1.5rem
@@ -242,6 +239,7 @@ section
 		@include bold()
 /*Секция с отзывами*/
 .feedback
+	position: relative
 	background: url("../img/feedback/fb-bg.jpg")
 	&-title
 		text-align: center
@@ -297,7 +295,25 @@ section
 			background-color: white
 			border-bottom: none
 			border-top-right-radius: 10rem
-			
+	&-form
+		background-color: white
+		text-align: center
+		margin-top: 6rem 
+		padding: 4rem 8rem
+		h3
+			margin-bottom: 2rem
+			@include bold()
+			font-size: 1.8rem
+		label
+			transform: translate(-50%, 7px)
+	&-btn
+		max-width: 30rem
+	&-arm	
+		position: absolute
+		bottom: 0
+		left: 0
+		max-width: 30rem
+
 
 
 
@@ -346,8 +362,16 @@ section
 
 @media (max-width: 1199px)
 	.prices-card
-		h4
-			min-height: 5rem		
+		h3
+			min-height: 5rem
+			margin-top: 3rem
+			font-size: 2rem
+	.feedback
+		&-form
+			padding: 3rem 5rem
+		
+			
+
 
 @media (max-width: 991px)
 	.main
@@ -378,12 +402,26 @@ section
 			float: none
 	.main-content
 		margin-top: 15rem
-	.prices
-		
-			
-			
 
-		
+	.feedback
+		&-arm
+			max-width: 20rem	
+
+@media (max-width: 575px)	
+	.main
+		h1
+			font-size: 3rem
+	.feedback
+		label
+			line-height: 1.2rem
+		&-prev
+			left: 0
+		&-next
+			right: 0
+		&-arm
+			max-width: 15rem		
+		&-btn
+			font-size: 1.2rem		
 			
 
 
