--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,15 @@ button:focus, input:focus, a:focus, textarea:focus {
 section {
   padding: 10rem 0; }
 
+.section-header {
+  text-align: center;
+  margin: 2rem 0 10rem; }
+  .section-header h2 {
+    font-size: 3.6rem;
+    font-family: 'ProximaNova_Bold', sans-serif; }
+  .section-header_green {
+    color: #49bf15; }
+
 /* Main (первая секция)*/
 .header {
   height: 7rem; }
@@ -181,12 +190,7 @@ section {
     margin-top: 3rem;
     margin-right: 0; }
   .prices-header {
-    text-align: center;
-    color: white;
-    margin: 2rem 0 10rem; }
-    .prices-header h2 {
-      font-family: 'ProximaNova_Bold', sans-serif;
-      font-size: 3.6rem; }
+    color: white; }
     .prices-header p {
       font-size: 1.4rem; }
   .prices-card {
@@ -226,12 +230,6 @@ section {
 .feedback {
   position: relative;
   background: url("../img/feedback/fb-bg.jpg"); }
-  .feedback-title {
-    text-align: center;
-    margin: 2rem 0 10rem; }
-    .feedback-title h2 {
-      font-size: 3.6rem;
-      font-family: 'ProximaNova_Bold', sans-serif; }
   .feedback-slider {
     padding: 5rem 6rem;
     background-color: #ffffff;
@@ -296,6 +294,48 @@ section {
     left: 0;
     max-width: 30rem; }
 
+/*Секция Схема работы*/
+.scheme {
+  background: white url(../img/scheme/6_1.png) no-repeat bottom -10rem right -10rem;
+  background-size: 65rem; }
+  .scheme p {
+    font-size: 1.3rem; }
+  .scheme-block {
+    min-height: 10rem;
+    margin: 3rem 3rem; }
+    .scheme-block h3 {
+      font-size: 2rem;
+      font-family: 'ProximaNova_Bold', sans-serif; }
+
+/* Секция Всё включено */
+.inclusive {
+  background-color: #f5f5f5; }
+  .inclusive .media {
+    min-height: 10rem; }
+    .inclusive .media h4 {
+      font-size: 1.6rem;
+      font-family: 'ProximaNova_Bold', sans-serif; }
+    .inclusive .media p {
+      font-size: 1.1rem; }
+  .inclusive .circle {
+    display: inline-block;
+    background-color: #49bf15;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%; }
+    .inclusive .circle-border {
+      display: inline-block;
+      padding: 0.3rem;
+      width: 4rem;
+      height: 4rem;
+      border: 2px solid #49bf15;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 3rem;
+      color: white;
+      font-size: 1.6rem;
+      font-family: 'ProximaNova_Bold', sans-serif; }
+
 /*Оформление всплывашек*/
 .popup {
   display: none;
@@ -321,7 +361,7 @@ section {
   .popup-header {
     font-family: 'ProximaNova_Bold', sans-serif; }
   .popup-form {
-    padding: 0;
+    padding: 0 3rem;
     margin-top: 3rem; }
   .popup-close {
     position: absolute;
@@ -335,6 +375,7 @@ section {
     background-color: transparent;
     cursor: pointer; }
 
+/* ------------------- МЕДИА-ЗАПРОСЫ -----------------------*/
 @media (max-width: 1199px) {
   .prices-card h3 {
     min-height: 5rem;
@@ -370,7 +411,12 @@ section {
   .main-content {
     margin-top: 15rem; }
   .feedback-arm {
-    max-width: 20rem; } }
+    max-width: 20rem; }
+  .scheme {
+    background: none;
+    text-align: center; }
+    .scheme-block {
+      height: auto; } }
 
 @media (max-width: 575px) {
   .main h1 {
