--- a/sass/style.sass
+++ b/sass/style.sass
@@ -329,6 +329,7 @@ section
 		
 /* Секция Всё включено */
 .inclusive
+	font-size: 1.4rem
 	background-color: #f5f5f5 
 	.media
 		min-height: 10rem	
@@ -357,6 +358,7 @@ section
 			@include bold()
 /*  Секция Развеем опасения*/
 .fears
+	font-size: 1.4rem
 	position: relative
 	&-list
 		border: 3px solid
@@ -400,8 +402,40 @@ section
 		bottom: 0
 		left: 50%
 		margin-left: -19rem
-		
 
+.materials
+	.section-header
+		p 
+			margin-top: 5rem
+	font-size: 1.9rem
+	text-align: center
+	background: url('../img/materials/bg.jpg') no-repeat center
+	background-size: cover
+	
+	&-block 
+		text-align: center
+		
+		&_img
+			min-height: 18rem
+			img
+				display: block
+				margin: 0 auto
+
+		h3
+			@include bold()
+		a 
+			color: $icon-green
+			border-bottom: 2px dotted $icon-green
+			&:hover
+				border-bottom: none	
+				color: darken($icon-green, 15%)			
+	&-footer 
+		margin-top: 11rem
+		font-size: 2rem
+		@include bold()
+	&-site
+		color: $icon-green		
+	
 /*Оформление всплывашек*/
 .popup
 	display: none
