--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,6 +20,7 @@ body
 button, input, a, textarea 
 	&:focus
 		outline: none
+
 /*Стили всех кнопочек*/
 .button
 	background-color: $btn-color
@@ -45,6 +46,8 @@ button, input, a, textarea
 		background-color: white
 		padding: 0.5rem
 	&_input, &-textarea
+		text-align: center
+		font-size: 1.3rem
 		display: block
 		width: 100%
 		border: 1px solid #ddd 
